--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,6 +9,8 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
+  CARGO_BUILD_FEATURES: prometheus-metrics
+  RUST_RELEASE_MODE: release
 
 # There is a single job in this workflow. It's configured to run on the latest available version of Ubuntu.
 jobs:
